# unitylib

./: .gitignore  README.md
Assets/AssetManager/Utility/: ObjectPool.cs
Assets/AssetsManager/Editor/: AssetBinaryDiffRule.cs  FileFilter.cs  GenerateManifest.cs  GeneratePatch.cs  GenerateWindow.cs  TestAM.cs
Assets/AssetsManager/Scripts/: Asset.cs  AssetsManager.cs  AssetsUpdater.cs  BinaryPatchUtility.cs  HttpRequest.cs  Manifest.cs  RemoteVersions.cs  Version.cs
Assets/AssetsUpdate/Editor/: AssetBinaryDiffRule.cs  GenerateManifest.cs  GeneratePatch.cs  GenerateWindow.cs  TestAM.cs  TestJson.cs
Assets/AssetsUpdate/Scripts/: Asset.cs  AssetsUpdateManager.cs  AssetsUpdater.cs  BinaryPatchUtility.cs  HttpClient.cs  Manifest.cs  RemoteVersions.cs  Version.cs
Assets/DungeonLevelKit/Materials/: MedievalDungeonAtlas02.mat  MedievalDungeonAtlas03.mat  MedievalDungeonAtlas04.mat
Assets/Examples/Editor/: ClassInspector.cs  PropertyFieldInWindow - Copy.cs  SerializedObjectInWindow.cs  TestFontSerialize.cs  TestShaderImport.cs
Assets/Examples/Scenes/: TestEditor.unity
Assets/Examples/Scripts/: MyObject.cs  SomeComponent.cs
Assets/Libs/fastJSON/: JSON.cs
Assets/Scenes/: test.unity
Assets/Tests/Animations/: GameObject.controller  GameObjectTimeline.playable  New Animation.anim  PositionAnimation.anim  Test.anim  TestTimeline.playable  panel.controller
Assets/Tests/Editor/: Gacha.xls  Gacha.xlsx  Gacha1.xlsx  Gacha2.xlsx  Gacha3.xlsx  Test.xlsx  Test1.xlsx
Assets/Tests/Editor/Config/: Achievement.xlsx  Dict.xlsx  Food.xlsx  FoodGroupAppear.xlsx  Gacha.xlsx  Lang.xlsx  Pot.xlsx
Assets/Tests/Editor/UI/: TestBigTreeView.cs
Assets/Tests/Fonts/: C1.fnt  C1.fontsettings  C1.mat  Chanel.fnt  Chanel.fontsettings  Chanel.mat  Number.fnt  Number.fontsettings  Number.mat  Number2.fnt  Number2.fontsettings  Number2.mat  Number3.fnt  Number3.fontsettings  Number3.mat  TestChanel.fnt  TestChanel.fontsettings  TestChanel.mat  Txt.fnt  Txt.fontsettings  Txt.mat  arial_copy.fontsettings  arial_copy.mat
Assets/Tests/Materials/: Test.mat  TestMaterial.mat
Assets/Tests/Prefabs/Find/: TestA.prefab  TestB.prefab
Assets/Tests/Prefabs/Scenes/: GameOverScene.prefab  GameScene.prefab  StartScene.prefab
Assets/Tests/Resources/Scenes/: GameOverScene.prefab  GameScene.prefab  StartScene.prefab
Assets/Tests/Scenes/: TestAssestUnload1.unity  TestAssestUnload2.unity  TestAssetUpdate.unity  TestCustomYield.unity  TestFont.unity  TestHash.unity  TestHttp.unity  TestKeepSceneDirector.unity  TestParallax.unity  TestPolygon.unity  TestSceneDirector.unity  TestSimpleUI.unity  TestTimeline.unity  TestUIWidgets.unity  TestVirtualKeyboard.unity  test.unity
Assets/Tests/Scenes/Inputs/: 1.unity  TestBaseInput.unity  TestInput.unity  TestJoystick.unity
Assets/Tests/Scenes/UI/: TestMonoMvc.unity  TestMvc.unity  TestUI.unity  TestUIWidgets.unity
Assets/Tests/Scenes/test_singleton/: SingletonA.unity  SingletonB.unity
Assets/Tests/Scripts/: MoveTest.cs  MyTest.cs  SkinnedMeshCombiner.cs  TestAssetUpdate.cs  TestAssetsMonitor.cs  TestCustomYield.cs  TestHttp.cs  TestManager.cs  TestMd5.cs  TestPolgyon.cs  TestScreenshot.cs  TestSingleton.cs  TestSingletonB.cs  TestTexture.cs  TestVirtualKeyboard.cs
Assets/Tests/Scripts/Dao/: UserDao.cs
Assets/Tests/Scripts/Excel/: TestExcel.cs
Assets/Tests/Scripts/Inputs/: TestInput.cs
Assets/Tests/Serializes/: MyObjA.cs
Assets/YHLib/Editor/: AnimationCopy.cs  AnimationEditor.cs  AnimationSplit.cs  BigTreeView.cs  BindEvent.cs  ClipInfo.cs  EditorCoroutine.cs  FindUtil.cs  MyEditor.cs  MyWindow.cs  ReferenceFind.cs  SimpleEditorCoroutine.cs  YHEditorTools.cs
Camera/: MouseOrbit.cs
Cameras/: AbstractCamera.cs  FreeCamera.cs
Docs/: ALR.7z  CSharpHastTestX64  CSharpHastTestX86  Update.md  资源.md
Docs/Name Convention/: 7-ways-keep-unity-project-organized.docx  Mastering Unity Project Folder Structure. Level 2 – Assets Organization.docx  U3d文件夹结构和文件命名规范-大写版.xmind  U3d文件夹结构和文件命名规范-小写版.xmind  U3d文件夹结构和文件命名规范-模块版.xmind  unity3d-best-practices.docx  目录结构.MD
Docs/UI/: MVX.md  UI架构.md
Fx/: Easing.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Tools/Roslyn/ProjectComplleCheck/: CMakeLists.txt  compile_checker.py
Tools/Roslyn/ProjectComplleCheck/cmakes/: Common.cmake  FindReferences.cmake  ProjectDefines.cmake  SetupConfigurations.cmake
Tools/Roslyn/ProjectComplleCheck/projects/Editor/: CMakeLists.txt
Tools/Roslyn/ProjectComplleCheck/projects/Firstpass/: CMakeLists.txt
Tools/Roslyn/ProjectComplleCheck/projects/FirstpassEditor/: CMakeLists.txt
Tools/Roslyn/ProjectComplleCheck/projects/Scripts/: CMakeLists.txt
Tools/command_log/: unity_cmd_log.bat  unity_cmd_log.py  unity_cmd_log.sh
YHLib/Fx/: Easingx.cs
(+329 files in other folders)
